# marajo

./: .gitignore  CompVis.py  Functions.py  README.md  ROI.py  Vis.py  main.ipynb  main_over_time.ipynb  main_pca.ipynb  main_roi.ipynb  main_single_video.ipynb  moises.ipynb  pyproject.toml  requirements.txt
configs/: 003-1-bands.yaml  003-all-angles.yaml  004-2-fine-bands.yaml  004-lowpass.yaml  005-damping.yaml  default.yaml
gd_server/: main_gd_server.ipynb
marajo/: __init__.py  config.py
marajo/decomposition/: __init__.py  cp.py  pca.py
marajo/io/: __init__.py  roi.py  video.py
marajo/modal/: __init__.py  damping.py  fft.py  matching.py  mode_shapes.py  peaks.py  spectral_features.py  spectrogram.py  trends.py
marajo/pipelines/: __init__.py  over_time.py  phase_based.py  single_video.py  trend_analysis.py
marajo/preprocessing/: __init__.py  phase_pyramid.py  video_prep.py
marajo/viz/: __init__.py  mode_shapes.py  over_time.py  pca.py  signals.py  spectra.py  trends.py
old_scripts/: old.py
rois/: rois.json
scripts/: initial_video_pipeline.py  plot_interpretation.py  run_experiment_002.py  run_experiment_003.py  run_experiment_006.py  run_experiment_007.py  run_experiment_008.py  run_experiment_009.py  run_over_time.py  run_single_video.py  video_single_plot.py
src/marajomodes/analysis/: signal.py
src/marajomodes/data/: video.py
src/marajomodes/visualization/: plot.py
src/moises/: __init__.py
src/moises/cp/: __init__.py  cp_alg.py
src/moises/data/: __init__.py  load.py  video.py
src/moises/decomposition/: __init__.py  cp_alg.py  (+2 more)
(+1 files in other folders)
