[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marajo"
version = "0.1.0"
description = "Pipeline de identificação de frequências naturais em mudas de açaí via vídeo (linha exploratória do Eduardo)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Eduardo Cardoso", email = "ecardoso@easyjur.com" },
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "pyrtools>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ipykernel>=6.0",
    "jupyter>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marajo*"]
exclude = ["old_scripts*", "tests*", "scripts*", "notebooks*"]
